@@ -1,6 +1,6 @@
 
 // ep128emu -- portable Enterprise 128 emulator
-// Copyright (C) 2003-2008 Istvan Varga <istvanv@users.sourceforge.net>
+// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
 // http://sourceforge.net/projects/ep128emu/
 //
 // This program is free software; you can redistribute it and/or modify
@@ -66,6 +66,7 @@ namespace Ep128 {
     inline uint8_t readRaw(uint32_t addr) const;
     inline void write(uint16_t addr, uint8_t value);
     inline void writeRaw(uint32_t addr, uint8_t value);
+    inline void writeROM(uint32_t addr, uint8_t value);
     void setPage(uint8_t page, uint8_t segment);
     inline uint8_t getPage(uint8_t page) const;
     inline const uint8_t * getVideoMemory() const;
@@ -130,6 +131,13 @@ namespace Ep128 {
   {
     uint8_t segment = uint8_t(addr >> 14);
     if (!segmentROMTable[segment])
+      segmentTable[segment][addr & 0x3FFF] = value;
+  }
+
+  inline void Memory::writeROM(uint32_t addr, uint8_t value)
+  {
+    uint8_t segment = uint8_t(addr >> 14);
+    if (segmentTable[segment])
       segmentTable[segment][addr & 0x3FFF] = value;
   }
 
