@@ -5,6 +5,7 @@ Changes in version 2.0.9.2
     autodetected from the file if not specified
   * window icons have been implemented on non-Windows platforms if the
     emulator is built with FLTK 1.3.3 or newer
+  * new Lua functions: writeROM(), writeWordROM(), and loadROMSegment()
   * building with Lua 5.2 or 5.3 is now supported
   * various minor bug fixes
 
